// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display correct message for a single expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $25.00
  </h1>
</div>
`;

exports[`should display correct message for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $90.00
  </h1>
</div>
`;
